# NEDAF-Network-Data-Analysis-Framework

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PAIN_POINTS_ANALYSIS.md  README.md  context-for-paper.md  main.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-docker.txt  requirements-gpu.txt  requirements-llm.txt  requirements-ssh.txt  requirements.txt  test_hist.py  tests.py
backend/.claude/agent-memory/pyqt-performance-refactor/: MEMORY.md  known_bottlenecks.md  project_architecture.md  user_profile.md
backend/.claude/agents/: pyqt-performance-refactor.md
backend/Model/: DataManager.py  NetworkAnalysis.py  chatbot.py  data_manager.py  explore_logic.py  retriever.py  transformation_logic.py
backend/View/: ExploreData.py  FileExplorer.py  ImportData.py  LLMInsights.py  NetworkVisualizationMod.py  TransformationData.py  clusterLogin.py  explore_data_view.py  export_data_view.py  import_data_view.py  llm_insights_view.py  network_visualization.py  transform_data_view.py
backend/ViewModel/: config.py  logging_config.py
backend/api/: main.py  state.py
backend/api/routers/: ai.py  data.py  explore.py  graph.py
backend/test/: anovatest.py  tests.py
frontend/: Benchmark_layout_performance.md  Dockerfile  ExploreData-Implementación.md  README.md  index.html  package-lock.json  package.json
frontend/.claude/agents/: frontend-web-agent.md
frontend/src/: App.tsx  ExploreData.tsx  ImportData.tsx  LLMInsights.tsx  NetworkVisualization.tsx  Sidebar.tsx  index.css
frontend/src/services/: api.ts
